# cruijff_kit

./: .gitignore  ACS_EXAMPLE.md  ARCHITECTURE.md  ARTIFACT_LOCATIONS.md  CHANGELOG.md  CLAUDE.md  INVESTIGATION_SUMMARY.md  KNOWN_ISSUES.md  Makefile  README.md  REFACTORING_DESIGN_EXPERIMENT.md  REFACTORING_RECIPE_BASED_PARAMS.md  SKILLS_ARCHITECTURE_SUMMARY.md  SUPPORTED_MODELS.md  TABULAR_TO_TEXT_GEN.md  TEXT_GEN.md  WORKFLOW_GUIDE.md  claude.local.md.della  claude.local.md.template  claude_code_tips.md  convert_json_to_hf_dataset.py  convert_json_to_parquet.py  generate_slurm_script.py  pyproject.toml  save_all_hiddens.py  save_all_hiddens.slurm  save_all_hiddens.yaml  setup_finetune.py  total_eval.py  total_eval.yaml
.claude/: PR_CHECKLIST.md  mcp.json  packing_improvements_needed.md  scaffold_reproducibility_test.yaml  skill_separation_changes.md  workflow_test.yaml  workflow_test_base.yaml  workflow_test_recipe.yaml
.claude/agents/: generate-jinja-template.md  scaffold-inspect.md  scaffold-torchtune.md
.claude/skills/: FUTURE_IMPROVEMENTS.md
.claude/workflow_tests/: workflow_test.md  workflow_test_base.md  workflow_test_recipe.md
.config/: config.json
.github/workflows/: coverage.yml  gpu-smoke-test.yml  nightly-inspect.yml  nightly-tests.yml  nightly-torchtune.yml  pr-tests.yml
blueprints/capitalization/: README.md  generate_data.py  inspect_task.py
blueprints/folktexts/: README.md  README_continuous.md  baseline.py  generate_data.py  inspect_task.py  inspect_task_acs_continuous.py
blueprints/model_organism/: README.md
blueprints/model_organisms/: README.md
custom_datasets/: filtered_instruct_dataset.py
custom_recipes/: custom_recipe_utils.py  lora_finetune_distributed_v1.py  lora_finetune_single_device_v1.py  lora_finetune_single_device_val.py
data/green/: CLAUDE.md
data/red/: CLAUDE.md
data/yellow/: CLAUDE.md
docs/: ACS_EXAMPLE.md  ARCHITECTURE.md  ARTIFACT_LOCATIONS.md  PREREQUISITES.md  SKILLS_ARCHITECTURE_SUMMARY.md  SUPPORTED_MODELS.md  TABULAR_TO_TEXT_GEN.md  WORKFLOW_GUIDE.md  dataset_caching_best_practices.md  finetune_and_evaluate.md  merge-pre-yaml-refactor.md  skill-inconsistencies-backlog.md
experiments/: general_evaluation_inspect_task.py  general_evaluation_task.py  general_evaluation_task_design.md  inspect_task_general.py
experiments/capitalization/: README.md  accuracy_results_4_16.csv  inspect_task_capitalization.py  inspect_task_capitalization_legacy.py  package-lock.json  preprocess_input_data.py  run_inspect.py
experiments/folktexts/: README.md  convert_acs_formats.py  disagreement_analysis.py  extract_acs_by_state.py  extract_acs_continuous.py  extract_acs_verbose.py  hf_prefill_patch.md  inspect_task_acs.py  inspect_task_acs_continuous.py  inspect_task_acs_employment.py  inspect_task_acs_income.py  inspect_task_acs_mobility.py  inspect_task_acs_publiccoverage.py  inspect_task_acs_traveltime.py  ml_baseline.py  per_sample_shuffle_acs_variables.py  shuffle_acs_variables.py
experiments/synthetic_twins/: README.md  inspect_task_twins.py  inspect_task_twins_legacy.py  preprocess_input_data.py  preprocess_twin_data.py  twins_inspect_task.py  twins_task.py
heterogeneity/: heterogeneity_eval.py  heterogeneity_report.py
misc/: save_all_hiddens.py  save_all_hiddens.slurm  simple_manual_load_lora_and_play.py  test-utils.py  test-utils.slurm  total_eval.py
probes/bit_sequences/: README.md
probes/predictable_or_not/: README.md
projects/capitalization/: README.md  generate_data.py
projects/folktexts/: README.md  baseline.py  inspect_task.py
sanity_checks/bernoulli/: generate_input_data.py  inspect_task_bernoulli.py
sanity_checks/bit_sequences/: README.md  bit_sequences_inspect.py  bit_sequences_inspect_task.py  generate.py  generate_input_data.py  inspect_task_bit_sequences.py  inspect_task_bit_sequences_legacy.py
sanity_checks/count_digits/: generate_input_data.py  inspect_task_count_digits.py
sanity_checks/majority/: generate_input_data.py  inspect_task_majority.py
sanity_checks/model_organisms/: __init__.py  formats.py  generate.py  inputs.py  rules.py
sanity_checks/predictable_or_not/: README.md  generate_data.py  generate_input_data.py  inspect_task_predictable_or_not.py  inspect_task_predictable_or_not_legacy.py  predictable_or_not_inspect.py  (+1 more)
scripts/: check_env.py
src/: __init__.py  health.py
src/utils/: layout.py  (+5 more)
tabular_to_text_gen/: ARCHITECTURE.md  TABULAR_DATASET_NAMING.md  convert.py  requirements.txt
tasks/: next_steps_170.md
templates/: finetune_template.slurm  finetune_template.yaml
tests/: test_archive_experiment.py  test_prebuild_cache.py
text_gen/: ARCHITECTURE.md  __init__.py  convert.py
utils/: check_if_model_is_finetuned.py  convert_arrow_to_parquet.py  convert_json_to_parquet.py  finetune_custom_metrics.py  llm_utils.py  logger.py  spot_check.py
(+485 files in other folders)
