[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruijff_kit"
version = "0.1.1"
description = "A toolkit for research with social data and LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Mattie Niznik"},
    {name = "Matthew Salganik"},
    {name = "Sarah Pedersen"},
    {name = "Daniel Rigobon"},
    {name = "Alessandra Rister Portinari Maranca"},
    {name = "Donggyu Ban"},
]
dependencies = [
    "torch",
    "torchtune",
    "torchao",
    "torchvision",
    "wandb",
    "h5py",
    "inspect-ai",
    "inspect-viz",
    "datasets",
    "peft",
    "transformers>=4.57.1",
    "tokenizers>=0.22.1",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    # Note: GitHub CLI (gh) must be installed via conda separately:
    # conda install -c conda-forge gh -y
]

[tool.setuptools.package-dir]
cruijff_kit = "."

[tool.setuptools]
packages = [
  "cruijff_kit.utils",
  "cruijff_kit.tools",
  "cruijff_kit.tools.torchtune",
  "cruijff_kit.tools.torchtune.custom_recipes",
  "cruijff_kit.tools.inspect",
  "cruijff_kit.tools.inspect.scorers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]