[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruijff_kit"
version = "0.1.1"
description = "A toolkit for research with social data and LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Mattie Niznik"},
    {name = "Matthew Salganik"},
    {name = "Sarah Pedersen"},
    {name = "Daniel Rigobon"},
    {name = "Alessandra Rister Portinari Maranca"},
    {name = "Donggyu Ban"},
]
dependencies = [
    "torch>=2.9.1",
    "torchtune>=0.6.1",  # Makefile upgrades to nightly post-install
    "torchao>=0.14.1",
    "torchvision",
    "wandb",
    "h5py",
    "inspect-ai>=0.3.163",
    "inspect-viz",
    "datasets",
    "peft",
    "transformers>=4.57.1,<5",
    "tokenizers>=0.22.1",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    # Note: GitHub CLI (gh) must be installed via conda separately:
    # conda install -c conda-forge gh -y
]

[tool.setuptools.package-dir]
cruijff_kit = "."

[tool.setuptools]
packages = [
  "cruijff_kit.utils",
  "cruijff_kit.tools",
  "cruijff_kit.tools.torchtune",
  "cruijff_kit.tools.torchtune.custom_recipes",
  "cruijff_kit.tools.inspect",
  "cruijff_kit.tools.inspect.scorers",
  "cruijff_kit.tools.slurm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]