[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruijff_kit"
version = "0.2.2"
description = "A toolkit for research with social data and LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Mattie Niznik"},
    {name = "Matthew Salganik"},
    {name = "Sarah Pedersen"},
    {name = "Daniel Rigobon"},
    {name = "Alessandra Rister Portinari Maranca"},
    {name = "Donggyu Ban"},
]
dependencies = [
    "torch>=2.9.1",
    "torchtune>=0.6.1",  # Makefile upgrades to nightly post-install
    "torchao>=0.14.1,<0.15",  # 0.15 removed int4_weight_only (torchtune nightly needs it)
    "torchvision",
    "wandb",
    "h5py",
    "inspect-ai==0.3.209",  # pinned: registry prefix changed at 0.3.200; revisit before relaxing
    "inspect-viz",
    "datasets",
    "peft",
    "transformers>=4.57.1,<5",
    "tokenizers>=0.22.1",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    # Note: GitHub CLI (gh) must be installed via conda separately:
    # conda install -c conda-forge gh -y
]

[tool.setuptools.package-dir]
cruijff_kit = "src"

[tool.setuptools]
packages = [
  "cruijff_kit.utils",
  "cruijff_kit.tools",
  "cruijff_kit.tools.torchtune",
  "cruijff_kit.tools.torchtune.custom_recipes",
  "cruijff_kit.tools.inspect",
  "cruijff_kit.tools.inspect.scorers",
  "cruijff_kit.tools.slurm",
  "cruijff_kit.tools.model_organisms",
  "cruijff_kit.tabular_to_text_gen",
  "cruijff_kit.tabular_to_text_gen.lib",
  "cruijff_kit.tabular_to_text_gen.lib.perturbations",
  "cruijff_kit.tabular_to_text_gen.lib.templates",
]

[tool.ruff]
line-length = 88
# Exclude files derived from external repos (e.g., torchtune) to preserve diffability
exclude = ["src/tools/torchtune/custom_recipes/", "src/tools/torchtune/datasets/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]